k8s/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:    
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /movements(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: movements-api-cluster-ip-service
                port:
                  number: 9000
          - path: /kibana(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: kibana-service
                port:
                  number: 9000
